[package]
authors = ["Tri Nguyen <tri@trinnguyen.com>"]
edition = "2018"
name = "tncc"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
env_logger = "0.8.2"
log = "0.4.11"

[dev-dependencies]
test-case = "1.0.0"
